@@ -10,6 +10,7 @@ Changes in 0.60.1:
   * Client uses timestamps to determine which troves to install when their
     flavors score equally
   * Fixed build-side bug handling meta characters ([,*,etc) in file names 
+  * "cvc newpkg" now accepts pkgname=label syntax
 
 Changes in 0.60.0:
   * Changed changesets to compress individual files instead of the combined
